# link_containers

api/: Dockerfile  Makefile  docker-compose.yaml
api/app/: pyproject.toml  script.sh
api/app/src/: controllers_abstractions.py  db_config.py  init_database.py  pyproject.toml
api/app/src/app/: controller.py  models.py
api/app/src/config/: settings.py  urls.py  wsgi.py
db/: Makefile  docker-compose.yaml
migration/: Makefile  docker-compose.yaml
migration/app/: pyproject.toml  script.sh
migration/app/src/config/: settings.py  urls.py
migration/app/src/migrations/: env.py
spec/: access-algorithm.html  api.yaml  db-model.html
